schema/testdata/validation_field_unsupported_attribute/schema.keel
model User {
  fields {
    identity Identity {
      @something
    }
  }
}
