schema/testdata/errors/field_unsupported_attribute.keel
model User {
    fields {
        //expect-error:27:37:E011:field 'identity' has an unrecognised attribute @something
        identity Identity @something
    }
}
